--- a/frontend/task2/style.css
+++ b/frontend/task2/style.css
@@ -1,14 +1,13 @@
 body{
-    background-image: url("./login-bg.png");
+    background: #B85042;
     height: 500px;
 }
 
-/* .form-group {
-    margin: 5px; 
-} */
-#profile{
-    width: 105px;
-    height: 100px;
+
+    #profile{
+        width: 100px;
+        height: 100px;
+padding: 0;
     border-radius: 100px;
-    box-shadow: 0 0 5px 5px wheat;
+    box-shadow: 0 0 5px 5px rgb(105, 105, 76);
 }
