--- a/frontend/task5/style.css
+++ b/frontend/task5/style.css
@@ -46,7 +46,7 @@
     padding: 0px;
     margin: 0px !important;
     border-radius: 10px;
-    width: 180px;
+    width: 100%;
     height: 100%;
 }
  }
@@ -125,7 +125,7 @@
     padding: 0px !important;
     border-radius: 10px;
     height: 95%;
-    margin-left: -80% !important;
+    margin-left: -40% !important;
     width: auto;
 }
  }
