--- a/frontend/task3-copy/style.css
+++ b/frontend/task3-copy/style.css
@@ -1,4 +1,11 @@
 
+.modal {
+  z-index: 1050; /* Ensure modal is above other content */
+}
+
+.modal-backdrop {
+  z-index: 1040; /* Ensure backdrop is below modal */
+}
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
   .nm{
@@ -7,7 +14,9 @@
   .mtb{
     margin-bottom: 1.4em !important;
   }
-
+  .mobileViews{
+    display: flex !important;
+  }
   .imageBody{
     width: 100%;
     height: 100dvh;
@@ -96,7 +105,7 @@
     
 }
 .greengrass{
-    height: 58%;
+    height: 62.5%;
     background: #6EA758;
 }
 
@@ -111,6 +120,12 @@
 @media (min-width: 768px) { 
   .mtb{
     margin-bottom: 22px !important;
+  }
+  .mobileViews{
+    display: none !important;
+  }
+  .nm{
+    display: flex;
   }
 
   
@@ -220,6 +235,13 @@
   .mtb{
     margin-bottom: 3.7rem !important;
   }
+  .mobileViews{
+    display: none;
+  }
+  .nm{
+    display: flex;
+  }
+
 
   .imageBody{
     width: 100%;
@@ -323,6 +345,12 @@
 @media (min-width: 1200px) { 
   .mtb{
     margin-bottom: 4.7rem !important;
+  }
+  .mobileViews{
+    display: none;
+  }
+  .nm{
+    display: flex;
   }
 
   .imageBody{
