--- a/frontend/task3-copy/style.css
+++ b/frontend/task3-copy/style.css
@@ -1,3 +1,13 @@
+
+.modal.fade .modal-dialog {
+  transform: translate(0, 100%);
+  transition: transform 0.3s ease-out;
+}
+
+.modal.fade.show .modal-dialog {
+  transform: translate(0, 0);
+}
+
 .modal-content{
   padding: 0%;
   margin: 0%;
@@ -15,7 +25,7 @@
   height: 100% !important;
   width: 100% !important;
 }
-@media (max-width:576px) { 
+@media (max-width:506px) { 
   col-xs-6{
     width:50% ;
   }
@@ -93,6 +103,7 @@
     color: #f15e70;
   }
   .spanABlack{
+    
     color: black;
     text-decoration: none;
   }
@@ -125,7 +136,7 @@
     
 }
 .greengrass{
-    height: 75.0%;
+    height: auto;
     background: #6EA758;
 }
 
@@ -379,7 +390,6 @@
     display: flex;
   }
 
-
   .imageBody{
     width: 100%;
     height: 100dvh;
@@ -450,6 +460,16 @@
     background-color: transparent !important;
     border: none !important;
   }
+  .spanABlack{
+    
+    color: black;
+    text-decoration: none;
+  }
+  .spanABlack:hover{
+    text-decoration: none;
+
+    color: #f15e70;
+  }
   .gravel{
     background-color: #474849;
   }
@@ -476,10 +496,14 @@
 .Arimo{
   font-size: Arimo, sans-serif;
 }
+
  }
 
 /* // X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
+  .navid{
+    height: 50px;
+  }
   .mtb{
     margin-bottom: 4.7rem !important;
   }
@@ -547,7 +571,16 @@
     color: white;
     text-decoration: none;
   }
-  
+  .spanABlack{
+    font-size: 20px !important;
+    color: black;
+    text-decoration: none;
+  }
+  .spanABlack:hover{
+    text-decoration: none;
+
+    color: #f15e70;
+  }
   .spanP:hover{
     color: #f15e70;
   }
